--- a/Lesson17/carousel/index.html
+++ b/Lesson17/carousel/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <LINK href="./src/all.css" rel="stylesheet" type="text/css">
+    <LINK href="./JSEasyCodeHomeWorks/Lesson17/carousel/src/all.css" rel="stylesheet" type="text/css">
     <title>Document</title>
 </head>
 <body>
     <main id = "main">
-    <script src = "./src/carousel.js"></script>
+    <script src = "./JSEasyCodeHomeWorks/Lesson17/carousel/src/carousel.js"></script>
     </main>    
 </body>
 </html>
