--- a/Lesson18/events.html
+++ b/Lesson18/events.html
@@ -53,7 +53,7 @@
       <div class="resize"></div>
     </div>
   </section>
-  <script src="events.js"></script>
+  <script src="src/events.js"></script>
 </body>
 
 </html>
